@@ -9,7 +9,7 @@
 
 using namespace WoopsiUI;
 
-static const u16 NewTopaz_glyphdata[7170] = {
+static const u16 NewTopaz_glyphdata[7070] = {
 	// '!'
 	0x0000,0x0000,
 	0x8000,0x8000,
@@ -1244,60 +1244,49 @@ static const u16 NewTopaz_glyphdata[7170] = {
 	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
 	// 0x91
 	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,0x8000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x8000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,0x8000,0x8000,
+	0x0000,0x0000,0x8000,0x8000,0x8000,0x0000,0x0000,0x0000,
+	0x0000,0x8000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x8000,0x0000,0x8000,0x8000,0x8000,0x8000,0x8000,
+	0x0000,0x8000,0x0000,0x0000,0x8000,0x8000,0x8000,0x0000,
+	0x0000,0x8000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x8000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x8000,0x8000,0x8000,0x0000,0x0000,0x0000,
 	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
 	// 0x92
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,
-	0x8000,0x8000,0x8000,0x0000,0x0000,0x0000,0x8000,0x8000,
-	0x8000,0x8000,0x0000,0x0000,0x0000,0x8000,0x8000,0x8000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x8000,0x8000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,0x8000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,
+	0x0000,0x8000,0x8000,0x8000,0x8000,0x8000,0x8000,
+	0x0000,0x8000,0x8000,0x8000,0x8000,0x8000,0x8000,
+	0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
 	// 0x93
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x8000,0x8000,0x0000,0x0000,0x0000,0x0000,0x8000,
-	0x8000,0x8000,0x8000,0x0000,0x0000,0x0000,0x8000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,0x8000,
+	0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,
+	0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,0x8000,
+	0x0000,0x8000,0x8000,0x8000,0x8000,0x8000,0x8000,
+	0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
 	// 0x94
 	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,0x8000,
-	0x8000,0x8000,0x8000,0x8000,0x0000,0x0000,0x0000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x8000,0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,
+	0x8000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,
+	0x8000,0x8000,0x8000,0x0000,0x0000,0x8000,0x8000,0x8000,
+	0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
+	0x0000,0x0000,0x8000,0x8000,0x8000,0x8000,0x0000,0x0000,
 	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
 	// 0x95
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,
-	0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
-	0x8000,0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x8000,
-	0x8000,0x8000,0x0000,0x0000,0x8000,0x8000,0x8000,
-	0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
-	0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
-	0x0000,0x8000,0x8000,0x8000,0x8000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	// 0x96
 	0x0000,0x0000,0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,
 	0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
 	0x0000,0x8000,0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,
@@ -1308,21 +1297,21 @@ static const u16 NewTopaz_glyphdata[7170] = {
 	0x0000,0x0000,0x8000,0x8000,0x8000,0x8000,0x0000,0x0000,
 	0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,
 	0x0000,0x0000,0x8000,0x8000,0x8000,0x8000,0x0000,0x0000,
-	// 0x97
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
-	0x0000,0x0000,0x0000,0x8000,0x8000,0x8000,0x0000,0x0000,
-	0x0000,0x0000,0x8000,0x8000,0x0000,0x8000,0x8000,0x0000,
-	0x0000,0x8000,0x8000,0x0000,0x0000,0x0000,0x8000,0x8000,
-	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
-	0x0000,0x8000,0x8000,0x0000,0x8000,0x0000,0x0000,0x8000,
-	0x0000,0x8000,0x0000,0x0000,0x8000,0x8000,0x0000,0x8000,
-	0x0000,0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,
-	0x0000,0x8000,0x8000,0x0000,0x8000,0x8000,0x0000,0x8000,
+	// 0x96
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x0000,0x8000,0x0000,0x0000,0x0000,
+	0x0000,0x0000,0x8000,0x8000,0x8000,0x0000,0x0000,
+	0x0000,0x8000,0x8000,0x0000,0x8000,0x8000,0x0000,
+	0x8000,0x8000,0x0000,0x0000,0x0000,0x8000,0x8000,
+	0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,
+	0x8000,0x8000,0x0000,0x8000,0x0000,0x0000,0x8000,
+	0x8000,0x0000,0x0000,0x8000,0x8000,0x0000,0x8000,
+	0x8000,0x0000,0x0000,0x8000,0x0000,0x0000,0x8000,
+	0x8000,0x8000,0x0000,0x8000,0x8000,0x0000,0x8000,
 
 };
 
-static const u16 NewTopaz_offset[119] = {
+static const u16 NewTopaz_offset[118] = {
     0,   20,   70,  140,  200,  270,  350,  380,  420,  460,  530,  590,  620,  680,  710,  790,
   850,  890,  950, 1010, 1080, 1140, 1200, 1260, 1320, 1380, 1400, 1430, 1490, 1550, 1610, 1680,
  1750, 1810, 1870, 1930, 1990, 2050, 2110, 2170, 2230, 2270, 2330, 2400, 2460, 2530, 2610, 2670,
@@ -1330,10 +1319,10 @@ static const u16 NewTopaz_offset[119] = {
  3710, 3770, 3830, 3880, 3940, 4000, 4050, 4110, 4170, 4200, 4250, 4310, 4340, 4410, 4480, 4540,
  4600, 4660, 4720, 4780, 4830, 4890, 4950, 5020, 5090, 5150, 5210, 5270, 5290, 5350, 5420, 5430,
  5510, 5590, 5650, 5730, 5810, 5890, 5970, 6050, 6060, 6140, 6220, 6290, 6360, 6420, 6480, 6550,
- 6620, 6700, 6780, 6860, 6940, 7010, 7090,
+ 6620, 6700, 6770, 6840, 6920, 7000,
 };
 
-static const u8 NewTopaz_width[119] = {
+static const u8 NewTopaz_width[118] = {
  2, 5, 7, 6, 7, 8, 3, 4, 4, 7, 6, 3, 6, 3, 8, 6,
  4, 6, 6, 7, 6, 6, 6, 6, 6, 2, 3, 6, 6, 6, 7, 7,
  6, 6, 6, 6, 6, 6, 6, 6, 4, 6, 7, 6, 7, 8, 6, 6,
@@ -1341,13 +1330,13 @@ static const u8 NewTopaz_width[119] = {
  6, 6, 5, 6, 6, 5, 6, 6, 3, 5, 6, 3, 7, 7, 6, 6,
  6, 6, 6, 5, 6, 6, 7, 7, 6, 6, 6, 2, 6, 7, 1, 8,
  8, 6, 8, 8, 8, 8, 8, 1, 8, 8, 7, 7, 6, 6, 7, 7,
- 8, 8, 8, 8, 7, 8, 8,
+ 8, 7, 7, 8, 8, 7,
 };
 
 NewTopaz::NewTopaz(u8 fixedWidth)
 	: PackedFont16(
 		33,
-		151,
+		150,
 		NewTopaz_glyphdata,
 		NewTopaz_offset,
 		NewTopaz_width,
